refactor: replace Collectors.toList() with toList() for improved readability